overflow fix
fix

counter

pic reference fix

fix

fix folder

--- a/assets/modified_files/d-custom-style.css
+++ b/assets/modified_files/d-custom-style.css
@@ -3,6 +3,10 @@
     overflow: auto;
 }
 
+body {
+    overflow: hidden;
+}
+
 .book-header {
     display: flex;
 }
